# Content-Generation-Crew

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/content_crew/: __init__.py  __main__.py  constants.py  flow.py  gemini_client.py  main.py  models.py  streamlit_app.py  web_flow.py
src/content_crew/agents/: __init__.py  brief.py  production.py  research.py
src/content_crew/crews/brief_crew/: brief_crew.py
src/content_crew/crews/brief_crew/config/: agents.yaml  tasks.yaml
src/content_crew/crews/production_crew/: production_crew.py
src/content_crew/crews/production_crew/config/: agents.yaml  tasks.yaml
src/content_crew/crews/research_crew/: research_crew.py
src/content_crew/crews/research_crew/config/: agents.yaml  tasks.yaml
src/content_crew/tools/: __init__.py  banned_phrase_checker.py  csv_writer_tool.py  file_writer_tool.py  serper_search.py
